<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="72dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/crap"
            android:textColor="#000"
            android:textSize="24sp"
            tools:ignore="HardcodedText,MissingConstraints" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="195dp" />

        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/funds"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Start Game"
            android:textSize="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/rule"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/rule1"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:text="@string/first"
            android:textColor="#000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/rule2"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:text="@string/second"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/rule3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/trois"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:text="@string/four"
            android:textColor="#000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:text="@string/five"
            android:textColor="#000"
            android:textSize="14sp" />





    </LinearLayout>


</ScrollView>